--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
@@ -19,24 +20,85 @@
   </div>
 
   <div class="main-container">
-    <div class="search-bar">
+    <div class="search-container">
       <h2>SEARCH CITY</h2>
-
-
-    </div>
-    <div class="display-city">
-      <h2>CITY NAME</h2>
-      <ul>
-        <li>Temp:</li>
-        <li>Wind:</li>
-        <li>Humidity:</li>
-        <li>UV Index:</li>
+      <div class="search-input">
+        <form>
+          <input type="text" placeholder="Search..." name="search">
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+        <hr class="line">
+      </div>
+      <ul class="cities-button">
+        <li>GDL</li>
+        <li>CDMX</li>
+        <li>MONTERREY</li>
+        <li>LONDON</li>
+        <li>CARDIFF</li>
+        <li>SAN DIEGO</li>
+        <li>SAN FRANCISO</li>
+        <li>SEATTLE</li>
       </ul>
+    </div>
 
+    <div class="city-container">
+      <div class="display-city">
+        <h2>CITY NAME</h2>
+        <ul class="city-data">
+          <li>Temp:</li>
+          <li>Wind:</li>
+          <li>Humidity:</li>
+          <li>UV Index:</li>
+        </ul>
+      </div>
+      <div class="days-forecast">
+        <h2>5-DAY FORECAST</h2>
+        <div class="days-container">
+          <div class="day">Day 1
+            <div>Image</div>
+            <ul>
+              <li>Temp:</li>
+              <li>Wind:</li>
+              <li>Humidity:</li>
+            </ul>
+          </div>
+          <div class="day">Day 2
+            <div>Image</div>
+            <ul>
+              <li>Temp:</li>
+              <li>Wind:</li>
+              <li>Humidity:</li>
+            </ul>
+          </div>
+          <div class="day">Day 3
+            <div>Image</div>
+            <ul>
+              <li>Temp:</li>
+              <li>Wind:</li>
+              <li>Humidity:</li>
+            </ul>
+          </div>
+          <div class="day">Day 4
+            <div>Image</div>
+            <ul>
+              <li>Temp:</li>
+              <li>Wind:</li>
+              <li>Humidity:</li>
+            </ul>
+          </div>
+          <div class="day">Day 5
+            <div>Image</div>
+            <ul>
+              <li>Temp:</li>
+              <li>Wind:</li>
+              <li>Humidity:</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="days-forecast">
-      <h2>5 Day Forecast</h2>
-    </div>
+
+
   </div>
   <script src="./assets/js/script.js"></script>
 </body>
