Added global selectors JS, variables to get current date and function to get city name and weather info from API

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <h2>SEARCH CITY</h2>
       <div class="search-input">
         <form>
-          <input type="text" placeholder="Search..." name="search">
-          <button type="submit"><i class="fa fa-search"></i></button>
+          <input type="text" placeholder="Search..." name="search" id="inputCityName">
         </form>
+        <button class="search-button" type="submit" id="searchBtn">Search</button>
         <hr class="line">
       </div>
       <ul class="cities-button">
@@ -36,19 +36,19 @@
         <li>LONDON</li>
         <li>CARDIFF</li>
         <li>SAN DIEGO</li>
-        <li>SAN FRANCISO</li>
+        <li>SAN FRANCISCO</li>
         <li>SEATTLE</li>
       </ul>
     </div>
 
     <div class="city-container">
       <div class="display-city">
-        <h2>CITY NAME</h2>
+        <h2 id="cityName">CITY NAME</h2>
         <ul class="city-data">
-          <li>Temp:</li>
-          <li>Wind:</li>
-          <li>Humidity:</li>
-          <li>UV Index:</li>
+          <li id="cityTemp">Temp: </li>
+          <li id="cityWind">Wind: </li>
+          <li id="cityHumidity">Humidity: </li>
+          <li id="cityUv">UV Index: </li>
         </ul>
       </div>
       <div class="days-forecast">
@@ -57,41 +57,41 @@
           <div class="day">Day 1
             <div>Image</div>
             <ul>
-              <li>Temp:</li>
-              <li>Wind:</li>
-              <li>Humidity:</li>
+              <li>Temp: </li>
+              <li>Wind: </li>
+              <li>Humidity: </li>
             </ul>
           </div>
           <div class="day">Day 2
             <div>Image</div>
             <ul>
-              <li>Temp:</li>
-              <li>Wind:</li>
-              <li>Humidity:</li>
+              <li>Temp: </li>
+              <li>Wind: </li>
+              <li>Humidity: </li>
             </ul>
           </div>
           <div class="day">Day 3
             <div>Image</div>
             <ul>
-              <li>Temp:</li>
-              <li>Wind:</li>
-              <li>Humidity:</li>
+              <li>Temp: </li>
+              <li>Wind: </li>
+              <li>Humidity: </li>
             </ul>
           </div>
           <div class="day">Day 4
             <div>Image</div>
             <ul>
-              <li>Temp:</li>
-              <li>Wind:</li>
-              <li>Humidity:</li>
+              <li>Temp: </li>
+              <li>Wind: </li>
+              <li>Humidity: </li>
             </ul>
           </div>
           <div class="day">Day 5
             <div>Image</div>
             <ul>
-              <li>Temp:</li>
-              <li>Wind:</li>
-              <li>Humidity:</li>
+              <li>Temp: </li>
+              <li>Wind: </li>
+              <li>Humidity: </li>
             </ul>
           </div>
         </div>
