Testing local storage and added variable to add icon to corresponding city

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div class="city-container">
       <div class="display-city">
         <h2 id="cityName">CITY NAME</h2>
+        <div id="iconContainer"></div>
         <ul class="city-data">
           <li id="cityTemp">Temp: </li>
           <li id="cityWind">Wind: </li>
