--- a/index.html
+++ b/index.html
@@ -56,40 +56,45 @@
       <div class="days-forecast">
         <h2>5-DAY FORECAST</h2>
         <div class="days-container">
-          <div class="day">Day 1
-            <div class="city-icon-day-one" id="iconContainerDayOne">1</div>
+          <div class="day">
+            <h3 id="dayOneDate">Day 1</h3>
+            <div class="city-icon-day-one" id="iconContainerDayOne"></div>
             <ul>
               <li id="tempDayOne">Temp: </li>
               <li id="windDayOne">Wind: </li>
               <li id="humidityDayOne">Humidity: </li>
             </ul>
           </div>
-          <div class="day">Day 2
-            <div class="city-icon-day-two" id="iconContainerDayTwo">2</div>
+          <div class="day">
+            <h3 id="dayTwoDate">Day 2</h3>
+            <div class="city-icon-day-two" id="iconContainerDayTwo"></div>
             <ul>
               <li id="tempDayTwo">Temp: </li>
               <li id="windDayTwo">Wind: </li>
               <li id="humidityDayTwo">Humidity: </li>
             </ul>
           </div>
-          <div class="day">Day 3
-            <div class="city-icon-day-two" id="iconContainerDayThree">3</div>
+          <div class="day">
+            <h3 id="dayThreeDate">Day 3</h3>
+            <div class="city-icon-day-two" id="iconContainerDayThree"></div>
             <ul>
               <li id="tempDayThree">Temp: </li>
               <li id="windDayThree">Wind: </li>
               <li id="humidityDayThree">Humidity: </li>
             </ul>
           </div>
-          <div class="day">Day 4
-            <div class="city-icon-day-two" id="iconContainerDayFour">4</div>
+          <div class="day">
+            <h3 id="dayFourDate">Day 4</h3>
+            <div class="city-icon-day-two" id="iconContainerDayFour"></div>
             <ul>
               <li id="tempDayFour">Temp: </li>
               <li id="windDayFour">Wind: </li>
               <li id="humidityDayFour">Humidity: </li>
             </ul>
           </div>
-          <div class="day">Day 5
-            <div class="city-icon-day-two" id="iconContainerDayFive">5</div>
+          <div class="day">
+            <h3 id="dayFiveDate">Day 5</h3>
+            <div class="city-icon-day-two" id="iconContainerDayFive"></div>
             <ul>
               <li id="tempDayFive">Temp: </li>
               <li id="windDayFive">Wind: </li>
