Corrections for classes in UV Index and added some comments to JS

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="city-container">
       <div class="display-city">
-        <h2 id="cityName">CITY NAME</h2>
+        <h2 id="cityNameTitle">CITY NAME</h2>
         <div class="city-icon" id="iconContainer"></div>
         <ul class="city-data">
           <li id="cityTemp">Temp: </li>
@@ -104,8 +104,6 @@
         </div>
       </div>
     </div>
-
-
   </div>
   <script src="./assets/js/script.js"></script>
 </body>
