--- a/index.html
+++ b/index.html
@@ -29,15 +29,7 @@
         <button class="search-button" type="button" id="searchBtn">Search</button>
         <hr class="line">
       </div>
-      <ul class="cities-button">
-        <li>GDL</li>
-        <li>CDMX</li>
-        <li>MONTERREY</li>
-        <li>LONDON</li>
-        <li>CARDIFF</li>
-        <li>SAN DIEGO</li>
-        <li>SAN FRANCISCO</li>
-        <li>SEATTLE</li>
+      <ul class="cities-button" id="last-cities">
       </ul>
     </div>
 
